Fixed problem with overflow in firefox

--- a/src/styles/components/_searchResults.scss
+++ b/src/styles/components/_searchResults.scss
@@ -13,6 +13,10 @@
     }
 
     @include scrollbar;
+
+    ol {
+        height: 50rem;
+    }
 }
 
 .result-item {
